Fixes that should get everything working

--- a/test/Microsoft.SqlTools.ServiceLayer.Test.Common/Microsoft.SqlTools.ServiceLayer.Test.Common.csproj
+++ b/test/Microsoft.SqlTools.ServiceLayer.Test.Common/Microsoft.SqlTools.ServiceLayer.Test.Common.csproj
@@ -23,6 +23,7 @@
     <EmbeddedResource Include="Scripts/TestDbTableQueries.sql" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Microsoft.SqlTools.ServiceLayer.TestDriver\Microsoft.SqlTools.ServiceLayer.TestDriver.csproj" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\bin\ref\Newtonsoft.Json.dll</HintPath>
     </Reference>
